--- a/app.css
+++ b/app.css
@@ -72,6 +72,7 @@ button {
     transition: all 0.3s; /* How to transition transitions between all properties */
     --webkit-transition: all 0.3s; /* browser friendly */
     -moz-transition: all 0.3s;
+    outline: none;
 }
 
 button:hover {
